styling messages section

--- a/src/components/header/NavBar/nav.css
+++ b/src/components/header/NavBar/nav.css
@@ -71,34 +71,34 @@
     inset: 8px -15px auto auto !important;
 }
 
-.header-nav .messages .messages-item {
+.header-nav .messages .message-item {
     padding: 15px 10px;
     transition: 0.3s;
 }
 
-.header-nav .messages .messages-item a {
+.header-nav .messages .message-item  {
     display: flex;
 }
 
-.header-nav .messages .messages-item img {
+.header-nav .messages .message-item img {
     margin: 0 20px 0 10px;
     max-height: 40px;
 }
 
-.header-nav .messages .messages-item h4 {
+.header-nav .messages .message-item h4 {
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 5px;
     color: #444444;
 }
 
-.header-nav .messages .messages-item p {
+.header-nav .messages .message-item p {
     font-size: 13px;
     margin-bottom: 3px;
     color: #919191;
 }
 
-.header-nav .messages .messages-item:hover {
+.header-nav .messages .message-item:hover {
     background-color: #f6f9ff;
 }
 
@@ -106,34 +106,34 @@
     inset: 8px -15px auto auto !important;
 }
 
-.header-nav .messages .messages-item {
+.header-nav .messages .message-item {
     padding: 15px 10px;
     transition: 0.3s;
 }
 
-.header-nav .messages .messages-item a {
+.header-nav .messages .message-item a {
     display: flex;
 }
 
-.header-nav .messages .messages-item img {
+.header-nav .messages .message-item img {
     margin: 0 20px 0 10px;
     max-height: 40px;
 }
 
-.header-nav .messages .messages-item h4 {
+.header-nav .messages .message-item h4 {
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 5px;
     color: #444444;
 }
 
-.header-nav .messages .messages-item p {
+.header-nav .messages .message-item p {
     font-size: 13px;
     margin-bottom: 3px;
     color: #919191;
 }
 
-.header-nav .messages .messages-item:hover {
+.header-nav .messages .message-item:hover {
     background-color: #f6f9ff;
 }
 
